# syslog-ng

./: configure.ac
lib/: logmsg.c  logmsg.h
modules/python/: Makefile.am  python-debugger.c  python-debugger.h  python-logmsg.c  task0.py  task0.server.py  task0.syslog-ng.conf
modules/python/pylib/: Makefile.am
modules/python/pylib/syslogng/debuggercli/: __init__.py  choicecompleter.py  commandlinelexer.py  completer.py  completerlang.py  getoptlexer.py  langcompleter.py  lexertoken.py  macrocompleter.py  main.py  syslognginternals.py  tablexer.py  templatelang.py  templatelexer.py  tflang.py
modules/python/pylib/syslogng/debuggercli/tests/: test_choicecompleter.py  test_commandlinelexer.py  test_completer.py  test_completerlang.py  test_getoptlexer.py  test_lexer.py  test_macrocompleter.py  test_tablexer.py  test_templatelexer.py  test_tflang.py
